--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@types/material-colors": "^1.2.3",
+    "@types/react-color": "^3.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fabric": "^5.3.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.473.0",
+    "material-colors": "^1.2.6",
     "motion": "^12.3.1",
     "next": "15.1.5",
     "react": "^19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
