--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.8.0",
+    "@neondatabase/serverless": "^1.0.0",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -22,24 +25,34 @@
     "@types/react-color": "^3.0.13",
     "@uploadthing/react": "^7.3.0",
     "axios": "^1.8.3",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.41.0",
     "fabric": "^5.3.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.473.0",
     "material-colors": "^1.2.6",
     "motion": "^12.3.1",
     "next": "15.1.5",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-spinners": "^0.15.0",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "toast": "^0.5.4",
     "unsplash-js": "^7.0.19",
-    "uploadthing": "^7.5.2"
+    "uploadthing": "^7.5.2",
+    "use-file-picker": "^2.1.2",
+    "uuidv4": "^6.2.13",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -48,6 +61,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "postcss": "^8",
