--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
     "@types/material-colors": "^1.2.3",
     "@types/react-color": "^3.0.13",
     "@uploadthing/react": "^7.3.0",
+    "add": "^2.0.6",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
+    "drizzle-zod": "^0.7.0",
     "fabric": "^5.3.0",
+    "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.473.0",
     "material-colors": "^1.2.6",
@@ -45,6 +49,8 @@
     "react-icons": "^5.4.0",
     "react-spinners": "^0.15.0",
     "react-use": "^17.6.0",
+    "shadcn-ui": "^0.9.5",
+    "table": "^6.9.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "toast": "^0.5.4",
@@ -52,7 +58,8 @@
     "uploadthing": "^7.5.2",
     "use-file-picker": "^2.1.2",
     "uuidv4": "^6.2.13",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
