--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-spinners": "^0.15.0",
     "react-use": "^17.6.0",
     "shadcn-ui": "^0.9.5",
+    "stripe": "^17.7.0",
     "table": "^6.9.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
