--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^5.68.0",
     "@types/material-colors": "^1.2.3",
     "@types/react-color": "^3.0.13",
     "@uploadthing/react": "^7.3.0",
     "add": "^2.0.6",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -34,11 +36,12 @@
     "drizzle-orm": "^0.41.0",
     "drizzle-zod": "^0.7.0",
     "fabric": "^5.3.0",
+    "framer-motion": "^12.6.2",
     "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.473.0",
     "material-colors": "^1.2.6",
-    "motion": "^12.3.1",
+    "motion": "^12.6.2",
     "next": "15.1.5",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
@@ -72,8 +75,8 @@
     "drizzle-kit": "^0.30.5",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
