--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.473.0",
     "material-colors": "^1.2.6",
+    "mobx": "^6.13.7",
     "motion": "^12.6.2",
     "next": "15.1.5",
     "next-auth": "^5.0.0-beta.25",
