--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "drizzle-zod": "^0.7.0",
     "fabric": "^5.3.0",
     "framer-motion": "^12.6.3",
+    "jspdf": "^3.0.1",
     "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.473.0",
