--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/drizzle-adapter": "^1.8.0",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-context-menu": "^2.2.15",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -20,7 +21,7 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.3",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tabler/icons-react": "^3.34.0",
     "@tanstack/react-query": "^5.68.0",
@@ -49,6 +50,7 @@
     "motion": "^12.23.0",
     "next": "15.1.5",
     "next-auth": "^5.0.0-beta.25",
+    "nodemailer": "^6.10.1",
     "openai": "^4.102.0",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
@@ -78,6 +80,7 @@
     "@types/fabric": "^5.3.0",
     "@types/lodash": "^4.17.14",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/webfontloader": "^1.6.38",
